# CPPMILITARY

./: .gitignore  CMakeLists.txt  CMakePresets.json
build_debug/: ballistics
drone_autopilot/: CMakeLists.txt
drone_autopilot/checker/: checker_pi_arm64
drone_autopilot/include/: drone_link.h  gpio.h  guidance.h  uart.h
drone_autopilot/src/: gpio.cpp  guidance.cpp  main.cpp  uart.cpp
drone_ballistics/: CMakeLists.txt
drone_ballistics/data/: config.json  targets.json
drone_ballistics/include/: MissionProcessor.h  Types.h  helpers.h
drone_ballistics/include/config/: ComponentFactory.h  FileConfigLoader.h
drone_ballistics/include/interfaces/: IBallisticsSolver.h  IConfigLoader.h  IDroneState.h  ITargetProvider.h
drone_ballistics/include/providers/: JsonTargetProvider.h
drone_ballistics/include/solvers/: AnalyticalSolver.h  BallisticTable.h  TableSolver.h
drone_ballistics/include/state/: MissionContext.h  StateClasses.h
drone_ballistics/include/threads/: DronePhysics.h  ThreadSafeQueue.h
drone_ballistics/output/: simulation.json
drone_ballistics/src/: MissionProcessor.cpp  helpers.cpp  main.cpp
drone_ballistics/src/config/: ComponentFactory.cpp  FileConfigLoader.cpp
drone_ballistics/src/providers/: JsonTargetProvider.cpp
drone_ballistics/src/solvers/: AnalyticalSolver.cpp  BallisticTable.cpp  TableSolver.cpp
drone_ballistics/src/state/: StateClasses.cpp
drone_ballistics/src/threads/: DronePhysics.cpp  ThreadSafeQueue.cpp
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_05/src/: main.cpp  telemetry.cpp
homework_06/: CMakeLists.txt  Makefile  README.md
homework_06/data/: basic_2.txt  missing_value.txt  test_1.txt  test_2.txt  unknown_ammo.txt  wrong_var_type.txt
homework_06/include/: ballistics.hpp
homework_06/src/: ballistics.cpp  ballistics_cli.cpp  main.cpp
homework_06/tests/: ballistics_tests.cpp
